[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
config = "0.13.4"
actix-web = "4.4.1"
tokio = { version = "1.35.1", features = [ "macros", "rt-multi-thread"]}
serde = { version = "1.0.195", features = ["derive"] }
serde-aux = "4.4.0"
chrono = "0.4.31"
uuid = { version = "1.7.0", features = ["v4"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3.9" }
once_cell = "1.19.0"
secrecy = { version = "0.8.0" , features = ["serde"]}
unicode-segmentation = "1.10.1"
validator = "0.16.1"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.23"
claims = "0.7.1"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"