[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod"

[dependencies]
config = "0.14.0"
actix-web = "4.5.1"
actix-web-lab = "0.20"
tokio = { version = "1.36.0", features = [ "macros", "rt-multi-thread"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.114"
serde-aux = "4.5.0"
chrono = "0.4.35"
uuid = { version = "1.7.0", features = ["v4", "serde"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3.9" }
once_cell = "1.19.0"
secrecy = { version = "0.8.0" , features = ["serde"]}
unicode-segmentation = "1.11.0"
validator = "0.16.1"
rand = { version = "0.8.5", features = ["std_rng"]}
thiserror = "1.0.58"
anyhow = "1.0.81"
base64 = { version = "0.22.0", features = [] }
sha3 = "0.10"
argon2 = { version = "0.6.0-pre.0", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.2"
default-features = false
features = ["json","rustls-tls","cookies"]

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["rt", "macros"]}
wiremock = "0.6.0"
serde_json = "1.0.114"
linkify = "0.10.0"
serde_urlencoded = "0.7.1"